# NeuralForge-AI

./: README.md
dynamic-ai-slicing/: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  verification_report.json  verify_all_features.py
dynamic-ai-slicing/extreme_405b_model/: layer_0.extreme
dynamic-ai-slicing/models/extreme-405b/: layer_0.extreme
dynamic-ai-slicing/plugins/adaptive_routing/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/continual_kd_head/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/deep_thinking/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/extreme_405b/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/fractal_recursive_slicing/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/memory_persistence/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/neural_architecture_search/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/neural_pathway_slicing/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/novel_4d_slicing/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/predictive_cache/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/quantum_holographic/: __init__.py  plugin.py
dynamic-ai-slicing/plugins/quantum_superposition/: __init__.py  plugin.py
dynamic-ai-slicing/regular_large/: metadata.json
dynamic-ai-slicing/teacher_model/: metadata.json
dynamic-ai-slicing/tests/: test_smoke.py
dynamic-ai-slicing/ultra_model/: layer0_b.qz  layer0_w.qz  layer1_b.qz  layer1_w.qz  layer2_b.qz  layer2_w.qz  layer3_b.qz  layer3_w.qz  metadata.json
(+34 files in other folders)
