[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-ai-slicing"
version = "0.1.0"
description = "Dynamic model slicing + plugin-based continual learning (KD-head) in pure Python/Numpy."
authors = [{ name = "Techmad", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]
license = { text = "MIT" }

[project.scripts]
dynai = "dynai.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
# List packages explicitly. `plugins` is a top-level package inside `src`.
packages = ["dynai", "plugins", "plugins.slicing_windowed", "plugins.continual_kd_head", "plugins.ultra_slicing", "plugins.extreme_405b"]

[project.entry-points."dynai.slicing"]
windowed = "plugins.slicing_windowed.plugin:WindowedSlicing"
ultra = "plugins.ultra_slicing.plugin:UltraSlicing"
extreme_405b = "plugins.extreme_405b.plugin:Extreme405BSlicing"

[project.entry-points."dynai.continual"]
kd_head = "plugins.continual_kd_head.plugin:KDHeadContinual"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "PL",
  "RUF",
]
ignore = [
  "E501",  # handled by black; we keep lines mostly under 100 anyway
]